# scorta

./: LICENSE  README.md  pyproject.toml
src/base/: data_types.py  span_array.py
test/base/: test_data_types.py  test_span_array.py
